add hamming, pybind module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(FastVXXXX)
+project(FastVXXXX LANGUAGES CXX)
 
 add_subdirectory(pybind11)
+
+pybind11_add_module(hamming hamming_parallel.cpp)
