--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(FastVXXXX LANGUAGES CXX)
 
 add_subdirectory(pybind11)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 pybind11_add_module(hamming hamming_parallel.cpp)
